-- fixed sort options scrollbar

--- a/src/App.scss
+++ b/src/App.scss
@@ -255,6 +255,7 @@
           width: 100vw;
           height: 50vh;
           overflow: scroll;
+          scrollbar-width: none; /* Firefox */
           background-color: var(--color-alt-canvas);
           color: var(--color-prime);
           border-radius: 1rem 1rem 0 0;
@@ -289,6 +290,11 @@
             background-color: #008cfc;
           }
         }
+        /* Hide scrollbar for Chrome, Safari and Opera */
+        .options::-webkit-scrollbar {
+          display: none;
+        }
+        // }
       }
 
       .view-options {
